--- a/css/box1.css
+++ b/css/box1.css
@@ -38,7 +38,7 @@
 #box4 {
         width: 400px;
         height: 400px;
-        background-color: dimgrey;
+        background-color: grey;
         position: relative;
         bottom: -80px;
         right:-450px;
