--- a/css/box3.css
+++ b/css/box3.css
@@ -58,7 +58,7 @@
 #box4 {
         width: 200px;
         height: 200px;
-        background-color: dimgrey;
+        background-color: lightgray;
         position: relative;
         top: -50px;
         right: -50%;
