--- a/css/box2.css
+++ b/css/box2.css
@@ -37,7 +37,7 @@
 #box4 {
         width: 100px;
         height: 100px;
-        background-color: dimgrey;
+        background-color: grey;
         position: relative;
         top: -10px;
         right: -3%;
